force-app/main/default/objects/Metric__c/Metric__c.object-meta.xml
<CustomObject>
    <label>Metric</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>