force-app/main/default/objects/Metric__c/fields/Converted_Unit__c.field-meta.xml
<CustomField>
    <fullName>Converted_Unit__c</fullName>
    <label>Converted Unit</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>