force-app/main/default/objects/Metric__c/fields/Measured_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measured_Unit__c</fullName>
    <label>Measured Unit</label>
    <precision>12</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>