force-app/main/default/objects/Metric__c/fields/Measuring_System__c.field-meta.xml
<CustomField>
    <fullName>Measuring_System__c</fullName>
    <label>Measuring System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>CGS</fullName>
            </value>
            <value>
                <fullName>MKS</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>